test/neg/neg-vis9.errc
SrcIter and DestIter need to be over same base T type
